--- a/gallery.html
+++ b/gallery.html
@@ -86,25 +86,42 @@
 
   <!-- ROW 1 -->
   <div class="gallery-row">
-    <img src="images/dan1.jpg" alt="Western dance performance" onclick="openLightbox(this)">
-    <img src="images/dan2.jpg" alt="Bollywood dance rehearsal" onclick="openLightbox(this)">
-    <img src="images/dan3.jpg" alt="Hip hop dance show" onclick="openLightbox(this)">
+    <img src="images/dan1.jpg" alt="A proud moment of appreciation and togetherness at Unity Dance Company." onclick="openLightbox(this)">
+    <img src="images/dan2.jpg" alt="Memories made on a day of recognition and pride." onclick="openLightbox(this)">
+    <img src="images/dan3.jpg" alt="Little stars with big smiles, creating unforgettable memories.
+A proud moment of celebration at Unity Dance UK." onclick="openLightbox(this)">
   </div>
 
   <!-- ROW 2 -->
   <div class="gallery-row">
-    <img src="images/dan4.jpg" alt="Contemporary dance performance" onclick="openLightbox(this)">
-    <img src="images/dan5.jpg" alt="Freestyle dance routine" onclick="openLightbox(this)">
-    <img src="images/dan6.jpg" alt="Folk dance choreography" onclick="openLightbox(this)">
+    <img src="images/dan4.jpg" alt="Smiles full of pride and hearts full of joy.
+A beautiful moment of encouragement and celebration." onclick="openLightbox(this)">
+    <img src="images/dan5.jpg" alt="Together on one stage, sharing success and memories.
+A proud moment of unity and achievement." onclick="openLightbox(this)">
+    <img src="images/dan6.jpg" alt="A stage filled with energy, smiles, and togetherness.
+Moments that turn into lifelong memories." onclick="openLightbox(this)">
   </div>
 
   <!-- ROW 3 -->
   <div class="gallery-row">
-    <img src="images/dan7.jpg" alt="Zumba fitness session" onclick="openLightbox(this)">
+    <img src="images/dan7.jpg" alt="A proud moment of recognition and gratitude.
+Celebrating hard work and meaningful achievements together." onclick="openLightbox(this)">
     <img src="images/dan8.jpg" alt="Aerobics workout class" onclick="openLightbox(this)">
-    <img src="images/dan9.jpg" alt="Dance event celebration" onclick="openLightbox(this)">
-    <img src="images/dan10.jpg" alt="Finale group performance" onclick="openLightbox(this)">
+    <img src="images/dan9.jpg" alt="Sharing smiles, stories, and special memories.
+A beautiful behind-the-scenes moment of celebration." onclick="openLightbox(this)">
+    <img src="images/dan10.jpg" alt="Together in honour and appreciation.
+A memorable moment of unity and respect." onclick="openLightbox(this)">
   </div>
+
+   <div class="gallery-row">
+    <img src="images/dan11.jpg" alt="A heartfelt moment of respect and recognition.
+Celebrating dedication and meaningful achievements together." onclick="openLightbox(this)">
+    <img src="images/dan12.jpg" alt="A stage full of smiles, energy, and togetherness.
+Moments like these turn into lifelong memories." onclick="openLightbox(this)">
+    <img src="images/dan13.jpg" alt=" Smiling faces and proud hearts in one frame.
+A beautiful memory of unity and happiness." onclick="openLightbox(this)">
+  </div>
+
 
 </section>
 
