--- a/index.html
+++ b/index.html
@@ -124,41 +124,121 @@
 
 <!-- ================= ABOUT (SHORT) ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24">
- <div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
-  <p class="section-label">About Us</p>
-  <h2>Who We Are</h2>
 
-  <p class="info-text">
-    Unity Dance Company is a creative dance and fitness studio where students learn,
-    grow, and express themselves through movement. We offer multiple dance styles and
-    Zumba programs for boys and girls in a supportive and energetic environment.
-  </p>
+  <div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
 
-  <a href="about.html" class="read-more-btn">Read More</a>
+    <!-- LEFT CONTENT -->
+    <div>
+      <p class="section-label"><h1>About Us</h1></p>
+      <h4 class="about-title">Who We Are</h4>
+
+      <p class="info-text">
+        Unity Dance Company is a professional dance and fitness academy dedicated to
+        nurturing creativity, confidence, and discipline in every student. We provide
+        a positive and inspiring environment where learners of all ages can grow
+        through movement, teamwork, and self-expression.
+      </p>
+
+      <p class="info-text">
+        Our academy offers structured training programs designed to improve physical
+        fitness, mental focus, and social skills. From beginners to advanced learners,
+        we focus on building strong foundations while encouraging each student to
+        discover their unique potential.
+      </p>
+
+      <p class="info-text seo-text">
+        As one of the most trusted dance studios, Unity Dance Company is known for its
+        experienced instructors, student-friendly teaching methods, and commitment to
+        quality training. We aim to create confident performers and healthy individuals
+        who carry lifelong skills beyond the studio.
+      </p>
+
+      <div class="about-highlights">
+        <span>✔ Experienced Trainers</span>
+        <span>✔ Safe & Supportive Environment</span>
+        <span>✔ Focus on Confidence & Discipline</span>
+        <span>✔ Programs for Kids, Teens & Adults</span>
+      </div>
+    </div>
+
+    <!-- RIGHT CONTENT -->
+    <div class="about-box">
+      <h3>Why Choose Unity Dance Company?</h3>
+      <ul>
+        <li>Personal attention to every student</li>
+        <li>Regular stage exposure and performance opportunities</li>
+        <li>Balanced focus on fitness, creativity, and teamwork</li>
+        <li>Encouraging environment that builds self-esteem</li>
+      </ul>
+    </div>
+<a href="about.html" class="read-more-btn">Read More</a>
   </div>
+
 </section>
+
 
 <!-- ================= SERVICES (SHORT) ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24">
+
   <div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
-  <p class="section-label">Our Services</p>
-  <h2>What We Offer</h2>
 
-  <p class="info-text">
-    We provide professional dance training and fitness programs designed for students,
-    beginners, and performers of all levels.
-  </p>
+    <!-- LEFT CONTENT -->
+    <div>
+      <h1 class="section-label">Our Services</h1>
+      <h2 class="services-title">What We Offer</h2>
 
-  <ul class="info-list">
-    <li>Western, Bollywood, Folk, Hip Hop & Contemporary Dance</li>
-    <li>Freestyle Dance & Performance Training</li>
-    <li>Zumba Fitness for Boys and Girls</li>
-    <li>Aerobics, Stick, Chair & Ball Workouts</li>
-  </ul>
+      <p class="info-text">
+        We provide professional dance training and fitness programs designed for
+        students, beginners, and performers of all levels. Our goal is to help every
+        learner grow with confidence, discipline, and creativity in a positive and
+        motivating environment.
+      </p>
 
-  <a href="services.html" class="read-more-btn">Read More</a>
+      <p class="info-text seo-text">
+        At Unity Dance Company, our programs focus not only on technique but also on
+        building physical fitness, mental strength, teamwork, and stage confidence.
+        Whether you are learning for fun, fitness, or professional growth, we offer
+        the right guidance and support at every step.
+      </p>
+
+      <ul class="info-list">
+        <li>Western, Bollywood, Folk, Hip Hop & Contemporary Dance</li>
+        <li>Freestyle Dance & Performance Training</li>
+        <li>Zumba Fitness for Boys and Girls</li>
+        <li>Aerobics, Stick, Chair & Ball Workouts</li>
+        <li>Stage Shows, Events & Competition Training</li>
+        <li>Beginner to Advanced Level Coaching</li>
+      </ul>
+
+      <div class="service-highlights">
+        <span>✔ Certified Trainers</span>
+        <span>✔ Flexible Timings</span>
+        <span>✔ Personal Attention</span>
+        <span>✔ Fun & Friendly Classes</span>
+      </div>
+    </div>
+
+    <!-- RIGHT CONTENT -->
+    <div class="services-box">
+      <h3>Why Our Programs Stand Out</h3>
+      <p>
+        Our training approach is designed to balance fitness, creativity, and
+        performance skills. Students gain confidence through regular practice,
+        guided sessions, and performance opportunities.
+      </p>
+
+      <ul>
+        <li>Safe and supportive learning environment</li>
+        <li>Structured training plans for all age groups</li>
+        <li>Focus on overall personality development</li>
+        <li>Encouragement for creativity and self-expression</li>
+      </ul>
+    </div>
+<a href="services.html" class="read-more-btn">Read More</a>
   </div>
+
 </section>
+
 
 <!-- ================= HOME PAGE SEO CONTENT ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-20 md:pb-24 reveal">
