--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
 
     <div class="nav-left">
       <button class="menu-btn"  onclick="toggleMainMenu()">☰</button>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <a href="index.html" class="logo-text">Unity Dance Company</a>
     </div>
 
@@ -96,7 +97,7 @@
           Full Name
         </label>
         <input type="text" placeholder="Enter your name"
-          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#020617;color:#e5e7eb;outline:none;">
+          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#eff0f4;color:#e5e7eb;outline:none;">
       </div>
 
       <div style="margin-bottom:14px">
@@ -104,7 +105,7 @@
           Email Address
         </label>
         <input type="email" placeholder="Enter your email"
-          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#020617;color:#e5e7eb;outline:none;">
+          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#f1f1f5;color:#e5e7eb;outline:none;">
       </div>
 
       <div style="margin-bottom:18px">
@@ -112,7 +113,7 @@
           Message
         </label>
         <textarea rows="4" placeholder="Type your message here..."
-          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#020617;color:#e5e7eb;outline:none;resize:none;"></textarea>
+          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#f0f0f4;color:#e5e7eb;outline:none;resize:none;"></textarea>
       </div>
 
       <button type="submit"
@@ -184,7 +185,7 @@
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">UD</div>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <h3>Unity Dance Company</h3>
       <p>
         Inspiring dancers through training,
