--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,9 @@
 
     <div class="nav-left">
       <button class="menu-btn"  onclick="toggleMainMenu()">☰</button>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <a href="index.html" class="logo-text">Unity Dance Company.</a>
+      
     </div>
 
     <div class="nav-right" id="desktop-menu">
@@ -106,7 +108,7 @@ Moments that turn into lifelong memories." onclick="openLightbox(this)">
   <div class="gallery-row">
     <img src="images/dan7.jpg" alt="A proud moment of recognition and gratitude.
 Celebrating hard work and meaningful achievements together." onclick="openLightbox(this)">
-    <img src="images/dan8.jpg" alt="Aerobics workout class" onclick="openLightbox(this)">
+    <!-- <img src="images/dan8.jpg" alt="Aerobics workout class" onclick="openLightbox(this)"> -->
     <img src="images/dan9.jpg" alt="Sharing smiles, stories, and special memories.
 A beautiful behind-the-scenes moment of celebration." onclick="openLightbox(this)">
     <img src="images/dan10.jpg" alt="Together in honour and appreciation.
@@ -168,7 +170,7 @@ A beautiful memory of unity and happiness." onclick="openLightbox(this)">
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">UD</div>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <h3>Unity Dance Company.</h3>
       <p>
         Inspiring dancers through training,
