--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <div class="nav-left">
       <button class="menu-btn" onclick="toggleMainMenu()">☰</button>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <a href="index.html" class="logo-text">Unity Dance Company</a>
     </div>
 
@@ -73,18 +74,48 @@
 <!-- ================= CAROUSEL ================= -->
 <section class="hero-carousel">
   <div class="carousel-container">
+
     <div class="carousel-slide active">
-      <img src="images/dan1.jpg" alt="Dance performance stage at Unity Dance Company">
+      <div class="carousel-caption">
+       <h2>Dance Classes</h2>
+<p>
+  We offer professional dance classes in Western, Bollywood, Folk, Hip Hop, Freestyle, 
+  and Contemporary dance styles for students of all age groups. Our expert trainers 
+  focus on building confidence, creativity, fitness, and strong stage performance skills.
+</p>
+
+      </div>
+      <img src="images/carousel1.jpg" alt="">
     </div>
+
     <div class="carousel-slide">
-      <img src="images/dan2.jpg" alt="Dance rehearsal session">
+      <div class="carousel-caption">
+       <h2>Zumba & Fitness Programs</h2>
+<p>
+  We provide Zumba and fitness programs including Aerobics, Stick workouts, Chair exercises,
+  Ball training, and Leg workouts for boys and girls of all age groups. Our sessions are
+  designed to improve overall fitness, flexibility, stamina, strength, and healthy lifestyle habits.
+</p>
+
+      </div>
+      <img src="images/carousel2.jpg" alt="">
     </div>
+
     <div class="carousel-slide">
-      <img src="images/dan5.jpg" alt="Group choreography show">
+      <div class="carousel-caption">
+         <h2>Dance Classes</h2>
+<p>
+  We offer professional dance classes in Western, Bollywood, Folk, Hip Hop, Freestyle, 
+  and Contemporary dance styles for students of all age groups. Our expert trainers 
+  focus on building confidence, creativity, fitness, and strong stage performance skills.
+</p>
+      </div>
+      <img src="images/carousel1.jpg" alt="">
     </div>
 
     <button class="carousel-btn left" onclick="prevSlide()">‹</button>
     <button class="carousel-btn right" onclick="nextSlide()">›</button>
+
   </div>
 </section>
 
@@ -298,7 +329,7 @@
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">UD</div>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <h3>Unity Dance Company</h3>
       <p>
         Inspiring dancers through training,
