--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
 
     <div class="nav-left">
       <button class="menu-btn" onclick="toggleMainMenu()">☰</button>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <a href="index.html" class="logo-text">Unity Dance Company.</a>
     </div>
 
@@ -188,7 +189,7 @@
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">UD</div>
+      <img src="images/unity logo1.png"  class="nav-logo">
       <h3>Unity Dance Company.</h3>
       <p>
         Inspiring dancers through training,
