--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
   </p>
 
   <div style="max-width:420px">
-    <form action="https://formspree.io/f/maqqyvob" method="post">
+    <form>
 
       <div style="margin-bottom:14px">
         <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
