--- a/contact.html
+++ b/contact.html
@@ -92,36 +92,37 @@
   <div style="max-width:420px">
     <form>
 
-      <div style="margin-bottom:14px">
-        <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
-          Full Name
-        </label>
-        <input type="text" placeholder="Enter your name"
-          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#eff0f4;color:#e5e7eb;outline:none;">
-      </div>
+  <!-- FULL NAME -->
+  <div class="input-group" style="margin-bottom:14px">
+    <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
+      Full Name
+    </label>
+    <input type="text" placeholder="Enter your name">
+  </div>
 
-      <div style="margin-bottom:14px">
-        <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
-          Email Address
-        </label>
-        <input type="email" placeholder="Enter your email"
-          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#f1f1f5;color:#e5e7eb;outline:none;">
-      </div>
+  <!-- EMAIL -->
+  <div class="input-group" style="margin-bottom:14px">
+    <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
+      Email Address
+    </label>
+    <input type="email" placeholder="Enter your email">
+  </div>
 
-      <div style="margin-bottom:18px">
-        <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
-          Message
-        </label>
-        <textarea rows="4" placeholder="Type your message here..."
-          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#f0f0f4;color:#e5e7eb;outline:none;resize:none;"></textarea>
-      </div>
+  <!-- MESSAGE -->
+  <div class="input-group" style="margin-bottom:18px">
+    <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
+      Message
+    </label>
+    <textarea rows="4" placeholder="Type your message here..."></textarea>
+  </div>
 
-      <button type="submit"
-        style="padding:10px 24px;border-radius:9999px;background:linear-gradient(135deg,#14f195,#6d28d9);color:#000;font-weight:600;border:none;cursor:pointer;">
-        Send Message
-      </button>
+  <button type="submit"
+    style="padding:10px 24px;border-radius:9999px;background:linear-gradient(135deg,#14f195,#6d28d9);color:#000;font-weight:600;border:none;cursor:pointer;">
+    Send Message
+  </button>
 
-    </form>
+</form>
+
   </div>
 </div>
 
