--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
 <!-- ================= MISSION, VISION, VALUES ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-20 grid md:grid-cols-2 gap-8 items-center reveal">
-
+ <div class="glass rounded-3xl p-8 md:p-10">
   <div class="space-y-4">
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Our Purpose</p>
     <h2 class="text-3xl font-semibold">Mission, Vision & Values</h2>
@@ -115,6 +115,7 @@
       <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Variety of dance styles and fitness programs</li>
       <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Supportive environment for boys and girls</li>
     </ul>
+  </div>
   </div>
 </section>
 
