--- a/contact.html
+++ b/contact.html
@@ -108,6 +108,14 @@
     <input type="email"  name="email"placeholder="Enter your email" required>
   </div>
 
+  <!-- EMAIL -->
+  <div class="input-group" style="margin-bottom:14px">
+    <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
+      Phone No
+    </label>
+    <input type="phone"  name="phone"placeholder="Enter your phone No" required>
+  </div>
+
   <!-- MESSAGE -->
   <div class="input-group" style="margin-bottom:18px">
     <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
