--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       tailwind.config = {
         theme: {
           extend: {
-            colors: { accent: '#14f195', 'accent-2': '#6d28d9' }
+            colors: { accent: '#8B5CF6', 'accent-2': '#6d28d9' }
           }
         }
       };
@@ -125,7 +125,12 @@
   </div>
 
   <button type="submit"
-    style="padding:10px 24px;border-radius:9999px;background:linear-gradient(135deg,#14f195,#6d28d9);color:#000;font-weight:600;border:none;cursor:pointer;">
+    style="padding:10px 24px;border-radius:9999px; background: linear-gradient(
+  90deg,
+  #f9a8d4,
+  #ec4899,
+  #6d28d9
+);color:#000;font-weight:600;border:none;cursor:pointer;">
     Send Message
   </button>
 
