--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
 
       <h1 class="text-4xl md:text-5xl font-bold leading-tight">
-        Where <span class="neon-text">Passion Meets Performance</span>
+        Where Passion Meets Performance
       </h1>
 
       <p class="text-slate-300 max-w-xl">
