--- a/policies.html
+++ b/policies.html
@@ -69,10 +69,17 @@
 <!-- ================= POLICIES INTRO ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-20">
   <div class="glass rounded-3xl p-8 md:p-12 hero-gradient reveal">
-    <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Policies</p>
-    <h1 class="text-4xl font-bold mt-4">Studio Policies & Guidelines</h1>
+    <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">
+      Dance Studio Policies
+    </p>
+    <h1 class="text-4xl font-bold mt-4">
+      Studio Policies & Guidelines
+    </h1>
     <p class="text-slate-300 mt-4 max-w-3xl">
-      At Unity Dance Company, we believe in creating a safe, respectful, and professional environment for every dancer. Please review our policies below to understand your rights and responsibilities.
+      At Unity Dance Company, our studio policies are designed to ensure a safe,
+      professional, and welcoming environment for all students. These guidelines
+      help maintain discipline, fairness, and quality training across all dance
+      classes.
     </p>
   </div>
 </section>
@@ -82,7 +89,10 @@
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Terms & Conditions</h2>
     <p class="text-slate-400 mt-3">
-      By enrolling in any class or program at Unity Dance Company, students agree to follow studio rules, safety guidelines, and instructor directions. Enrollment confirms acceptance of schedules, fees, and studio policies.
+      By enrolling in any dance class, workshop, or program at Unity Dance Company,
+      students and parents agree to follow all studio rules, schedules, fee
+      structures, and instructor guidelines. Enrollment confirms acceptance of
+      studio timings, class structure, and behavioral expectations.
     </p>
   </div>
 </section>
@@ -92,7 +102,10 @@
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Privacy Policy</h2>
     <p class="text-slate-400 mt-3">
-      We respect your privacy. All personal information collected during registration is kept confidential and used only for communication, scheduling, and studio operations. We never share your data with third parties without consent.
+      Unity Dance Company values your privacy. Personal information collected during
+      registration, including names, contact details, and age, is used only for
+      communication, scheduling, and studio management. We do not sell, rent, or
+      share personal data with third parties without prior consent.
     </p>
   </div>
 </section>
@@ -100,12 +113,14 @@
 <!-- ================= REFUND & ATTENDANCE ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-20 reveal">
   <div class="glass rounded-3xl p-8 md:p-10">
-    <h2 class="text-2xl font-semibold">Refund, Cancellation & Attendance</h2>
+    <h2 class="text-2xl font-semibold">
+      Refund, Cancellation & Attendance Policy
+    </h2>
     <ul class="mt-4 space-y-3 text-slate-400 text-sm">
-      <li>• All class fees are non-refundable once the session begins.</li>
-      <li>• Missed classes cannot be refunded but may be rescheduled based on availability.</li>
-      <li>• Cancellations must be made at least 24 hours in advance.</li>
-      <li>• Students are expected to arrive on time and attend regularly.</li>
+      <li>• All dance class fees are non-refundable once the course or session has started.</li>
+      <li>• Missed classes are not eligible for refunds and may be rescheduled only if slots are available.</li>
+      <li>• Class cancellations must be informed at least 24 hours in advance.</li>
+      <li>• Regular attendance and punctuality are expected to ensure proper learning progress.</li>
     </ul>
   </div>
 </section>
@@ -115,17 +130,21 @@
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Code of Conduct</h2>
     <p class="text-slate-400 mt-3">
-      Unity Dance Company maintains a zero-tolerance policy for harassment, bullying, or discrimination. All dancers, parents, and staff must treat one another with respect and professionalism at all times.
+      Unity Dance Company maintains a respectful, inclusive, and harassment-free
+      environment. Any form of bullying, discrimination, or inappropriate behavior
+      will not be tolerated. The studio reserves the right to take disciplinary
+      action if policies are violated.
     </p>
 
     <ul class="mt-4 space-y-3 text-slate-400 text-sm">
-      <li>• Maintain respectful behavior inside and outside the studio.</li>
-      <li>• Follow instructor guidance for safety and discipline.</li>
-      <li>• Use studio facilities responsibly.</li>
-      <li>• Support a positive and inclusive learning environment.</li>
+      <li>• Show respect to instructors, staff, and fellow dancers at all times.</li>
+      <li>• Follow safety instructions and studio rules during every class.</li>
+      <li>• Handle studio property and equipment responsibly.</li>
+      <li>• Help create a positive and motivating dance learning environment.</li>
     </ul>
   </div>
 </section>
+
 
 </main>
 
