--- a/policies.html
+++ b/policies.html
@@ -75,12 +75,13 @@
     <h1 class="text-4xl font-bold mt-4">
       Studio Policies & Guidelines
     </h1>
-    <p class="text-slate-300 mt-4 max-w-3xl">
-      At Unity Dance Company, our studio policies are designed to ensure a safe,
-      professional, and welcoming environment for all students. These guidelines
-      help maintain discipline, fairness, and quality training across all dance
-      classes.
-    </p>
+
+    <ul class="text-slate-300 mt-4 max-w-3xl space-y-2 list-disc pl-5">
+      <li>Ensure a safe, professional, and welcoming environment</li>
+      <li>Maintain discipline, fairness, and transparency</li>
+      <li>Provide high-quality training for all students</li>
+      <li>Promote respect, inclusivity, and responsibility</li>
+    </ul>
   </div>
 </section>
 
@@ -88,12 +89,13 @@
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-20 reveal">
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Terms & Conditions</h2>
-    <p class="text-slate-400 mt-3">
-      By enrolling in any dance class, workshop, or program at Unity Dance Company,
-      students and parents agree to follow all studio rules, schedules, fee
-      structures, and instructor guidelines. Enrollment confirms acceptance of
-      studio timings, class structure, and behavioral expectations.
-    </p>
+
+    <ul class="text-slate-400 mt-4 space-y-2 list-disc pl-5">
+      <li>Enrollment confirms acceptance of all studio rules and policies</li>
+      <li>Students must follow instructor guidance and safety instructions</li>
+      <li>Class schedules and timings must be strictly followed</li>
+      <li>Fees and program structure are agreed upon at the time of registration</li>
+    </ul>
   </div>
 </section>
 
@@ -101,12 +103,13 @@
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-20 reveal">
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Privacy Policy</h2>
-    <p class="text-slate-400 mt-3">
-      Unity Dance Company values your privacy. Personal information collected during
-      registration, including names, contact details, and age, is used only for
-      communication, scheduling, and studio management. We do not sell, rent, or
-      share personal data with third parties without prior consent.
-    </p>
+
+    <ul class="text-slate-400 mt-4 space-y-2 list-disc pl-5">
+      <li>Personal information is collected only for studio operations</li>
+      <li>Data is used for communication, scheduling, and administration</li>
+      <li>Student details are kept confidential and secure</li>
+      <li>No personal data is shared with third parties without consent</li>
+    </ul>
   </div>
 </section>
 
@@ -116,11 +119,13 @@
     <h2 class="text-2xl font-semibold">
       Refund, Cancellation & Attendance Policy
     </h2>
-    <ul class="mt-4 space-y-3 text-slate-400 text-sm">
-      <li>• All dance class fees are non-refundable once the course or session has started.</li>
-      <li>• Missed classes are not eligible for refunds and may be rescheduled only if slots are available.</li>
-      <li>• Class cancellations must be informed at least 24 hours in advance.</li>
-      <li>• Regular attendance and punctuality are expected to ensure proper learning progress.</li>
+
+    <ul class="mt-4 space-y-3 text-slate-400 text-sm list-disc pl-5">
+      <li>All class fees are non-refundable once the session begins</li>
+      <li>Missed classes are not eligible for refunds</li>
+      <li>Make-up classes are subject to availability</li>
+      <li>Cancellations must be informed at least 24 hours in advance</li>
+      <li>Regular attendance and punctuality are mandatory</li>
     </ul>
   </div>
 </section>
@@ -129,18 +134,13 @@
 <section class="max-w-6xl mx-auto px-4 pb-20 md:pb-24 reveal">
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Code of Conduct</h2>
-    <p class="text-slate-400 mt-3">
-      Unity Dance Company maintains a respectful, inclusive, and harassment-free
-      environment. Any form of bullying, discrimination, or inappropriate behavior
-      will not be tolerated. The studio reserves the right to take disciplinary
-      action if policies are violated.
-    </p>
 
-    <ul class="mt-4 space-y-3 text-slate-400 text-sm">
-      <li>• Show respect to instructors, staff, and fellow dancers at all times.</li>
-      <li>• Follow safety instructions and studio rules during every class.</li>
-      <li>• Handle studio property and equipment responsibly.</li>
-      <li>• Help create a positive and motivating dance learning environment.</li>
+    <ul class="text-slate-400 mt-4 space-y-3 text-sm list-disc pl-5">
+      <li>Maintain respectful and professional behavior at all times</li>
+      <li>Zero tolerance for bullying, harassment, or discrimination</li>
+      <li>Follow studio rules and safety guidelines strictly</li>
+      <li>Use studio facilities and equipment responsibly</li>
+      <li>Support a positive and inclusive learning environment</li>
     </ul>
   </div>
 </section>
