--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <li>Beginner to Advanced Level Coaching</li>
       </ul>
 
-      <div class="service-highlights">
+      <div class="about-highlights">
         <span>✔ Certified Trainers</span>
         <span>✔ Flexible Timings</span>
         <span>✔ Personal Attention</span>
