--- a/policies.html
+++ b/policies.html
@@ -91,13 +91,17 @@
     <h2 class="text-2xl font-semibold">Terms & Conditions</h2>
 
     <ul class="text-slate-400 mt-4 space-y-2 list-disc pl-5">
-      <li>Enrollment confirms acceptance of all studio rules and policies</li>
-      <li>Students must follow instructor guidance and safety instructions</li>
-      <li>Class schedules and timings must be strictly followed</li>
-      <li>Fees and program structure are agreed upon at the time of registration</li>
+      <li>Unity Dance Company maintains discipline and obedience for all students.</li>
+      <li>All students are required to attend classes regularly without unnecessary reasons.</li>
+      <li>Monthly fees must be paid on or before the 10th of every month without fail.</li>
+      <li>If a student leaves the classes and rejoins after 6 months, re-admission fees must be paid.</li>
+      <li>The academy conducts competitions and inter-class dance battles regularly.</li>
+      <li>We also provide opportunities to participate in TV channel shows (such as Zee Kannada, DKD), stage award shows, and movie shooting projects for students.</li>
+      <li>For more details, please contact: <strong>9008760265</strong>, <strong>8147093265</strong>.</li>
     </ul>
   </div>
 </section>
+
 
 <!-- ================= PRIVACY POLICY ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-20 reveal">
